adicionei uma imagem

--- a/index.html
+++ b/index.html
@@ -8,13 +8,16 @@
     <link rel="stylesheet" href="">
 </head>
 <link rel="stylesheet" href="style.css">
+
 <body>   
-<header>
+
+<header class="cabecalho">
    <h1>
     vai ser uma imagem aqui
 </h1> 
+<img class ="cabecalho images" src="images.jpeg" alt="logo de escola">
   <ul>
-   <li>escolas</li>
+   <li>escola</li>
    <li>estudante</li>
   </ul>
 </header>
