--- a/index.html
+++ b/index.html
@@ -13,13 +13,27 @@
 
 <header class="cabecalho">
    <h1>
-    vai ser uma imagem aqui
 </h1> 
-<img class ="cabecalho images" src="images.jpeg" alt="logo de escola">
+<img class ="cabecalho images" src="images.png" alt="logo de escola">
   <ul>
    <li>escola</li>
    <li>estudante</li>
   </ul>
 </header>
+
+<section>
+  <h2>Sobre a turma:</h2>
+  <p> Nossa turma da se4gunda serie B,e famosa e um pouco dispersa mas entrega exelente
+    resultados.</p>
+    <p> Esta e uma turma muito diversa, participativa e emgajada, sempre colaborando com suas experiencia.</p>
+    <img src="teaching-math.jpg" alt="sala de aula">
+</section>
+<section class="turma">
+  <h2 class="turma">sobre a turma</h2>
+  <p class="turma-paragrafo-um">Nossa turma da segunda serie B, e famosa e um pouco dispersa mas entrega exelentes resultados.</p>
+  <p class="turma-paragrafo-dois">Esta e uma turma muito diversa, participátiva e emgajada, sempre colaborando com suas experiencia.</p>
+<img class="turma download.jpeg"src="teaching-math.jpg" alt="sala de aula">
+</section>
 </body>
 </html>
+  
