--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <section>
   <h2>Sobre a turma:</h2>
-  <p> Nossa turma da se4gunda serie B,e famosa e um pouco dispersa mas entrega exelente
+  <p> Nossa turma da segunda serie B,e famosa e um pouco dispersa mas entrega exelente
     resultados.</p>
     <p> Esta e uma turma muito diversa, participativa e emgajada, sempre colaborando com suas experiencia.</p>
     <img src="teaching-math.jpg" alt="sala de aula">
