--- a/index.html
+++ b/index.html
@@ -36,4 +36,35 @@
 </section>
 </body>
 </html>
+
+
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="EI=edge">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+      <title>PROFESSORA MARIA DE LOURDES</title>
+      <link rel="stylesheet"href="style.css">
+
+
+  </head>
+  <body>
+  <header class="cabecalho">
+    <img class="cabecalho-imagem" src="alura.png" alt="logo da alura">
+  <ul>
+    <li class="cabecalho-item">turma</li>
+    <li class="cabecalho cabecalho-item">estudante</li>
+    </ul>
+    </header>
+
+
+    <section class="turma">
+      <h2 class="turma-titulo">Sobre a turma</h2>
+      <div class="turma-div">
+        <p class="turma-paragrafo">Esta e uma turma muito divertida, participativa e engajada. Sempre colaborando com suas experiencia.</p>
+        <img class="turma-imagem" src="sala.jpg" alt="sala de aula">
+        </div>
+        </section>
+        
   
