--- a/index.html
+++ b/index.html
@@ -4,67 +4,49 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>turma 2ano B</title>
-    <link rel="stylesheet" href="">
+    <title>Pablo, Camily, Natasha</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<link rel="stylesheet" href="style.css">
 
-<body>   
-
+<body>  
 <header class="cabecalho">
-   <h1>
-</h1> 
-<img class ="cabecalho images" src="images.png" alt="logo de escola">
+<img class ="cabecalho-imagem" src="alura.jpeg" alt="logo de escola">
   <ul>
-   <li>escola</li>
-   <li>estudante</li>
+   <li class="cabecalho-item">Turma</li>
+   <li class="cabecalho-item">Estudante</li>
   </ul>
 </header>
-
-<section>
-  <h2>Sobre a turma:</h2>
-  <p> Nossa turma da segunda serie B,e famosa e um pouco dispersa mas entrega exelente
-    resultados.</p>
-    <p> Esta e uma turma muito diversa, participativa e emgajada, sempre colaborando com suas experiencia.</p>
-    <img src="teaching-math.jpg" alt="sala de aula">
-</section>
-<section class="turma">
-  <h2 class="turma">sobre a turma</h2>
-  <p class="turma-paragrafo-um">Nossa turma da segunda serie B, e famosa e um pouco dispersa mas entrega exelentes resultados.</p>
-  <p class="turma-paragrafo-dois">Esta e uma turma muito diversa, participátiva e emgajada, sempre colaborando com suas experiencia.</p>
-<img class="turma download.jpeg"src="teaching-math.jpg" alt="sala de aula">
-</section>
-</body>
-</html>
-
-
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="EI=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-      <title>PROFESSORA MARIA DE LOURDES</title>
-      <link rel="stylesheet"href="style.css">
-
-
-  </head>
-  <body>
-  <header class="cabecalho">
-    <img class="cabecalho-imagem" src="alura.png" alt="logo da alura">
-  <ul>
-    <li class="cabecalho-item">turma</li>
-    <li class="cabecalho cabecalho-item">estudante</li>
-    </ul>
-    </header>
-
 
     <section class="turma">
       <h2 class="turma-titulo">Sobre a turma</h2>
       <div class="turma-div">
         <p class="turma-paragrafo">Esta e uma turma muito divertida, participativa e engajada. Sempre colaborando com suas experiencia.</p>
-        <img class="turma-imagem" src="sala.jpg" alt="sala de aula">
+        <img class="turma-imagem" src="sala.jpeg" alt="sala de aula">
         </div>
         </section>
-        
+   <section class="estudante">
+          <h1 class="estudante-titulo">Qem sao nossos estudante</h1>
+
+  <div class="estudante-div">
+        <img class="estudante-imagem" src="aluno.png" alt="imagem de estudante">
+        <img class="estudante-icons" src="git.png" alt="icons github">
+        <h3 class="estudante-legenda">Pablo</h3>
+</div>
+
+<div class="estudante-div">
+  <img class="estudante-imagem" src="aluno.png" alt="imagem de estudante">
+  <img class="estudante-icons" src="git.png" alt="icons github">
+  <h3 class="estudante-legenda">Camily</h3>
+</div>
+
+
+<div class="estudante-div">
+  <img class="estudante-imagem" src="aluno.png" alt="imagem de estudante">
+  <img class="estudante-icons" src="git.png" alt="icons github">
+  <h3 class="estudante-legenda">Natasha</h3>
+</div>
+      </section>
+  </body>
+</html>
+
   
