--- a/index.html
+++ b/index.html
@@ -45,6 +45,25 @@
   <img class="estudante-icons" src="git.png" alt="icons github">
   <h3 class="estudante-legenda">Natasha</h3>
 </div>
+
+
+<div class="estudante-div">
+  <img class="estudante-imagem" src="aluno.png" alt="imagem de estudante">
+  <img class="estudante-icons" src="git.png" alt="icons github">
+  <h3 class="estudante-legenda">maria</h3>
+</div>
+
+<div class="estudante-div">
+  <img class="estudante-imagem" src="aluno.png" alt="imagem de estudante">
+  <img class="estudante-icons" src="git.png" alt="icons github">
+  <h3 class="estudante-legenda">lucas</h3>
+</div>
+
+<div class="estudante-div">
+  <img class="estudante-imagem" src="aluno.png" alt="imagem de estudante">
+  <img class="estudante-icons" src="git.png" alt="icons github">
+  <h3 class="estudante-legenda">luis</h3>
+</div>
       </section>
   </body>
 </html>
