--- a/index.html
+++ b/index.html
@@ -10,61 +10,86 @@
 
 <body>  
 <header class="cabecalho">
-<img class ="cabecalho-imagem" src="alura.jpeg" alt="logo de escola">
+<img class ="cabecalho-imagem" src="video_jingle_3.png" alt="logo de escola">
   <ul>
    <li class="cabecalho-item">Turma</li>
    <li class="cabecalho-item">Estudante</li>
   </ul>
 </header>
 
-    <section class="turma">
+<section class="turma">
       <h2 class="turma-titulo">Sobre a turma</h2>
-      <div class="turma-div">
-        <p class="turma-paragrafo">Esta e uma turma muito divertida, participativa e engajada. Sempre colaborando com suas experiencia.</p>
-        <img class="turma-imagem" src="sala.jpeg" alt="sala de aula">
-        </div>
-        </section>
-   <section class="estudante">
-          <h1 class="estudante-titulo">Qem sao nossos estudante</h1>
 
-  <div class="estudante-div">
+      <div class="turma-div">
+          <p class="turma-paragrafo">Esta e uma turma muito divertida, participativa e engajada. Sempre colaborando com suas experiencia.</p>
+          
+              <img class="turma-imagem" src="sala2.jpeg" alt="sala de aula">
+      </div>
+</section>
+
+   <section class="estudante">
+          <h2 class="estudante-titulo">Qem sao nossos estudante</h2>
+
+          <div class="estudante-todos">
+
+                        <span></span>          
+    <div class="estudante-div">
+       <h3 class="estudante-legenda">Pablo</h3>
         <img class="estudante-imagem" src="aluno.png" alt="imagem de estudante">
         <img class="estudante-icons" src="git.png" alt="icons github">
-        <h3 class="estudante-legenda">Pablo</h3>
-</div>
+        
+    </div>
+
 
 <div class="estudante-div">
-  <img class="estudante-imagem" src="aluno.png" alt="imagem de estudante">
-  <img class="estudante-icons" src="git.png" alt="icons github">
   <h3 class="estudante-legenda">Camily</h3>
+  <img class="estudante-imagem" src="aluno.png" alt="imagem de estudante">
+  <img class="estudante-icons" src="git.png" alt="icons github">
+  
 </div>
 
 
+
 <div class="estudante-div">
-  <img class="estudante-imagem" src="aluno.png" alt="imagem de estudante">
-  <img class="estudante-icons" src="git.png" alt="icons github">
   <h3 class="estudante-legenda">Natasha</h3>
+  <img class="estudante-imagem" src="aluno.png" alt="imagem de estudante">
+  <img class="estudante-icons" src="git.png" alt="icons github">
+  
+</div>
+
+                      <span></span>          <span></span>
+
+<div class="estudante-div">
+  <h3 class="estudante-legenda">Maria</h3>
+  <img class="estudante-imagem" src="aluno.png" alt="imagem de estudante">
+  <img class="estudante-icons" src="git.png" alt="icons github">
+  
 </div>
 
 
 <div class="estudante-div">
+  <h3 class="estudante-legenda">Lucas</h3>
   <img class="estudante-imagem" src="aluno.png" alt="imagem de estudante">
   <img class="estudante-icons" src="git.png" alt="icons github">
-  <h3 class="estudante-legenda">maria</h3>
+  
 </div>
 
-<div class="estudante-div">
-  <img class="estudante-imagem" src="aluno.png" alt="imagem de estudante">
-  <img class="estudante-icons" src="git.png" alt="icons github">
-  <h3 class="estudante-legenda">lucas</h3>
-</div>
 
 <div class="estudante-div">
+  <h3 class="estudante-legenda">Luis</h3>
   <img class="estudante-imagem" src="aluno.png" alt="imagem de estudante">
   <img class="estudante-icons" src="git.png" alt="icons github">
-  <h3 class="estudante-legenda">luis</h3>
 </div>
-      </section>
+
+
+                     <span></span>
+  </div>   
+</section>
+    <footer class="rodape">
+                    <h3>Turma 2 ANO B</h3>
+                    <p>Todos os direitos reservados&#174;</p>
+    </footer>
+
   </body>
 </html>
 
